added about section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="head">
             <div class="landpage">
-                <h1><img src="./logo/logo.png"></h1>
+                <h1><img src="/logo/logo.png"></h1>
             </div>
             <div class="welki">
                 <h1>WELCOME</h1>
@@ -32,3 +32,26 @@
         </div>
     </div>
     <!-- end of landing page -->
+    <!-- about-us -->
+    <div class="container-fluid mt-5" id="about-us">
+        <div class="about_m">
+            <h3><strong>ABOUT US</strong></h3>
+        </div>
+        <div class="para">
+            <p>When you work with us, you are part of a team of committed collaborators. All aspects of our
+                software development process are intergrated, interactive
+                                  <br>and agile<br>
+                <br>
+                <br>
+                Our approach unifies design, development and product management to create exceptional products.
+                <br>
+                <br>
+                We start each project by understanding the business goals, user's needs and product
+                requirements.
+                <br>
+                <br>
+                Then we help translate them into effective and elagant solutions
+            </p>
+        </div>
+    </div>
+    <!-- end about-us -->
