--- a/index.html
+++ b/index.html
@@ -55,3 +55,24 @@
         </div>
     </div>
     <!-- end about-us -->
+    <!-- services -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="-lg-2.5 ml-4 mt-3-md-12" id="services">
+                <div class="sub-services">
+                    <strong>
+                        <h3 class="what-we-do">SERVICES</h3>
+                    </strong>
+                    Before we sign a contract or write a line of code our team will spend the necessary time needed
+                        to understand you product vision<br>
+                        <br>
+                    The outcome of this scoping session is proposal or high-level statement of work.
+                    <br>
+                    <br>
+                    based on your requirements, we can provide a complete offering or just the pieces you need.
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- services -->
