--- a/index.html
+++ b/index.html
@@ -76,3 +76,71 @@
         </div>
     </div>
     <!-- services -->
+    <!-- what we do -->
+    <div class="container-fluid">
+        <div class="row mt-5">
+            <div class="-lg-2.5 ml-4 mt-3-md-12 text-center">
+                <h3 class="about-title">WHAT WE DO</h3>
+            </div>
+        </div>
+      <div class="what">
+        <div class="row mt-3">
+            <div class="-lg-2.5 ml-4 mt-3-md-4 ">
+                <div class="design-all ">
+                    <div class="design-icon">
+                        <img src="./services_icons/design_icon.png" alt="" id="designIcon">
+                    </div>
+                    <div class="what-we-do">
+                        <h5 class="design">DESIGN</h5>
+                    </div>
+                    <div class="design-description">
+                        Our design practice offers a full range of <br>
+                        services including brand strategy, interaction <br>and
+                        visual design and user experience testing.<br>
+                        Throughout your project, our designers create <br>
+                        and implement visual design and workflows,<br> solicit
+                        user feedback and work with you to <br>
+                        make sure what gets built is what is needed.
+                    </div>
+                </div>
+            </div>
+            <div class="-lg-2.5 ml-4 mt-3-md-4">
+                <div class="development-all">
+                    <div class="development-icon">
+                        <img src="./services_icons/dev_icon.png" alt="" id="developmentIcon">
+                    </div>
+                    <div class="what-we-do">
+                        <h5 class="development">DEVELOPMENT</h5>
+                    </div>
+                    <div class="development-description">
+                        All engineers are fluent in the latest enterprise, <br>
+                        mobile and web development technologies.<br>
+                        They collaborate with your team to write, <br>
+                        and improve code on a daily basis, <br>
+                        using proven practices such as <br>
+                        test-driven development pair programming.
+                    </div>
+                </div>
+            </div>
+            <div class="-lg-2.5 ml-4 mt-3-md-4">
+                <div class="roduct-all">
+                    <div class="product-icon">
+                        <img src="./services_icons/product_icon.png" alt="" id="productIcon">
+                    </div>
+                    <div class="what-we-do">
+                        <h5 class="product">PRODUCT MANAGEMENT</h5>
+                    </div>
+                    <div class="product-description">
+                        Planning and development is iterative.<br>
+                         Because we are constantly coding and testing, <br>the
+                        products we build are always ready to go live.<br>
+                        This iterative process allows for changes<br> 
+                        as business requirements evolve.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+      </div>
+    </div>
+    <!-- what we do -->
