added works section

--- a/index.html
+++ b/index.html
@@ -144,3 +144,22 @@
       </div>
     </div>
     <!-- what we do -->
+    <!-- works -->
+    <div class="portfolio">
+        <h3 class="about-title">PORTFOLIO</h3>
+    </div>
+    <div class="container-fluid">
+        <div class="col" id="pic1">
+            <img src="./portfolio/work1.jpg" alt="">
+            <img src="./portfolio/work2.jpg" alt="">
+            <img src="./portfolio/work3.jpg" alt="">
+            <img src="./portfolio/work4.jpg" alt="">
+        </div>
+        <div class="col" id="pic3">
+            <img src="./portfolio/work5.jpg" alt="">
+            <img src="./portfolio/work6.jpg" alt="">
+            <img src="./portfolio/work7.jpg" alt="">
+            <img src="./portfolio/work8.jpg" alt="" class="girr">
+        </div>
+    </div>
+    <!-- works -->
