--- a/index.html
+++ b/index.html
@@ -163,3 +163,42 @@
         </div>
     </div>
     <!-- works -->
+     <!-- contact -->
+   <div class="container">
+    <div id="contactus">
+        <h3>CONTACT US</h3>
+        <form action="#" method="post">
+            <div class="form-colls" id="formcolls">
+                <input type="text" name="username" id="username" placeholder="Name...">
+                <input type="email" name="usermail" id="usermail" placeholder="Email...">
+            </div>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message here..."></textarea>
+            <br>
+            <br>
+            <input type="submit" id="submit" onclick="return validation()" value="SEND">
+        </form>
+    </div>
+   </div>
+    <!-- contact -->
+    <div class="footer md-4">
+        <div class="container">
+            <div class="follow-like">
+                <img src="./social_icon/twitter.png" alt="">
+                <img src="./social_icons//facebook.png" alt="">
+                <img src="./social_icons//g_plus.png" alt="">
+                <img src="./social_icons//skype.png" alt="">
+                <img src="./social_icons/dribble.png" alt="">
+                <img src="./social_icons//stumble_upon.png" alt="">
+                <img src="./social_icons//behance.png" alt="">
+                <img src="./social_icons//pinterest.png" alt="">
+                <img src="./social_icons//flickr.png" alt="">
+                <img src="./social_icons/you_tube.png" alt="">
+            </div>
+            <div class="pim">
+               <p>DELANI STUDIO <br>
+                2019
+              </p>
+            </div>
+            
+        </div>
+    </div>
