--- a/index.html
+++ b/index.html
@@ -202,3 +202,7 @@
             
         </div>
     </div>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/index.js"></script>
+</body>
+</html>
